# thoth-chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Misc.h  main.cpp
src/Board-Representation/: BitBoard.h  Board.cpp  Board.h  Move.h  ZobristKeys.cpp  ZobristKeys.h
src/Movegeneration/: Attacks.cpp  Attacks.h  Movegen.cpp  Movegen.h
src/Search/: Evaluation.cpp  Evaluation.h  Search.cpp  Search.h
src/UCI/: Uci.cpp  Uci.h
